--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,3 +677,11 @@ button#email-button {
         height: 200px;
     }
 }
+
+@media (orientation: landscape) {
+	img#hero-image {
+		width: 100%;
+		position: relative;
+		left: 1%;
+    }
+}
